// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render MovieSynopsis component render correctly 1`] = `
<p
  className="test"
>
  <span>
    Text
  </span>
</p>
`;

exports[`render MovieSynopsis component render correctly if info is shown 1`] = `
<p
  className="test active"
>
  <span>
    Text
  </span>
</p>
`;
